add swagger documentation

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <scope>runtime</scope>
         </dependency>
         <!--jwt-->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
