--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 spring.application.name=ocb
 server.port=9191
 server.servlet.context-path=/ocb
+springdoc.swagger-ui.path=/swagger
